# ProgramEle

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: .ninja_deps  .ninja_log  CMakeCache.txt  CalloutItem.cpp  CalloutItem.h  CanvasWidget.cpp  CanvasWidget.h  Dialogs.cpp  Dialogs.cpp.bak  Dialogs.h  ExportManager.cpp  ExportManager.h  FavoritesDockWidget.cpp  FavoritesDockWidget.h  MainWindow.cpp  MainWindow.h  Measurements.h  MeasurementsTool.cpp  MeasurementsTool.h  ProjectNavigatorWidget.cpp  ProjectNavigatorWidget.h  Settings.h  ToolModule.h  ToolSettingsWidget.cpp  ToolSettingsWidget.h  ToolsDockWidget.cpp  ToolsDockWidget.h  build.ninja  cmake_install.cmake  main.cpp  qtcsettings.cmake  test_main.cpp
src/.cmake/api/v1/reply/: cache-v2-4a4a8bc4837c9ff571ee.json  cmakeFiles-v1-79fabd66db829260ebf1.json  codemodel-v2-9336c524e4500ff0b20d.json  index-2025-12-01T16-41-07-0385.json  target-ElecCad2D-Debug-73bee985501332ad33a9.json  target-ElecCad2D_autogen-Debug-f95784bef7deac495a33.json
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: CanvasWidget.cpp.81773A88D6758A00.idx  CanvasWidget.h.9FA22B6A1578A627.idx  Dialogs.cpp.958175CEA9977DD6.idx  Dialogs.h.C371219AB13E4F7B.idx  FavoritesDockWidget.cpp.63320A35693113BA.idx  FavoritesDockWidget.h.6D8B2DF0A1085863.idx  MainWindow.cpp.F3309D74D568F72A.idx  MainWindow.h.5004C76D21899926.idx  ProjectNavigatorWidget.cpp.8D26EC8D011A39BC.idx  ProjectNavigatorWidget.h.92238C7765E488CC.idx  QAbstractListModel.50DF7117FE58DA59.idx  QAbstractTextDocumentLayout.AE310F776AF7BB0B.idx  QColorDialog.FA8714DB63020C20.idx  QComboBox.2BB7D997EBBAC870.idx  QContextMenuEvent.9B2516D46812764E.idx  QDateTime.40E3F6BAC7ED445B.idx  QDialog.CB2DD65F2EF3AE82.idx  QDialogButtonBox.C21BAEEDF2DD596A.idx  QFileDialog.1A7144D87E51CD68.idx  QFont.7CADDE7FA4C62344.idx  QFontMetrics.E7CC6128264625B3.idx  QFormLayout.B2E415CDEAB5C945.idx  QHBoxLayout.11F0BCDED168CA97.idx  QImage.92FD67B15A7AEA22.idx  QImageReader.772895AA29AA78BD.idx  QInputDialog.70022E3DBEE6BF0C.idx  QLayout.8ACD9D1EBDF1ABAB.idx  QLineEdit.89CBAC26D80606DC.idx  QMainWindow.A7B080A7DD818F39.idx  QMenuBar.367FC8ADB95D4369.idx  QMessageBox.98A1755DC89BCF72.idx  QMimeData.DB9E65F52345127E.idx  QMouseEvent.0144EA29C82E06D5.idx  QObject.06F3FEAD7BEE94E3.idx  QPainter.F0805EAFA3F41873.idx  QPrinter.4761F1493EC7CD5B.idx  QPushButton.91779FA95C41DCDF.idx  QRectF.D669E62651F47552.idx  QSize.75387DFDD15FA13F.idx  QSizeF.B2AA54143824C29D.idx  (+223 more)
src/ElecCad2D_autogen/: deps  mocs_compilation.cpp
src/ElecCad2D_autogen/UVLADIE3JM/: moc_CanvasWidget.cpp  moc_CanvasWidget.cpp.d  moc_Dialogs.cpp  moc_Dialogs.cpp.d  moc_FavoritesDockWidget.cpp  moc_FavoritesDockWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ProjectNavigatorWidget.cpp  moc_ProjectNavigatorWidget.cpp.d  moc_ToolSettingsWidget.cpp  moc_ToolSettingsWidget.cpp.d  moc_ToolsDockWidget.cpp  moc_ToolsDockWidget.cpp.d
